# cookiecutter-datascience

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .travis.yml  .travis.yml.swp  AUTHORS.rst  LICENSE.txt  README.md  dependencies-deploy.yaml  dependencies-develop.yaml  dependencies.yaml  deploy.md  environment.yaml  mkdocs.yml  setup.cfg  setup.py  structure.md
{{cookiecutter.project_name}}/.github/workflows/: python-package-conda.yml
{{cookiecutter.project_name}}/docs/: how-to-deploy.md  index.md
{{cookiecutter.project_name}}/note/00-data/: starai-get-data.ipynb  starai-preprocess.ipynb  starai-queries.ipynb
{{cookiecutter.project_name}}/note/deploy/: conda.ipynb  docs.ipynb  git.ipynb  pypi.ipynb  tests.ipynb
{{cookiecutter.project_name}}/note/get-data/: starai-get-data.ipynb
{{cookiecutter.project_name}}/note/tutorial/: hello_world.ipynb  quickstart.ipynb
{{cookiecutter.project_name}}/scripts/: conda-setup.sh
{{cookiecutter.project_name}}/src/: skeleton.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  skeleton.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/exps/: StarAiFlow.py
{{cookiecutter.project_name}}/tests/: test_pytest.py  test_skeleton.py  travis_setup.sh
